determinant/style.css
#determinant-parent {
    display: flex;
    gap: 10px;
    font-size: 3rem;
    align-items: center;
    justify-content: center;
}
@media screen and (max-width:1200px) {
    #determinant-parent,.clone{
    scale: .7;
    }
}
@media screen and (max-width:900px) {
    #determinant-parent,.clone{
    scale: .6;
    }
}
#determinant-btn {
    margin-top: 15px;
    font-size: large;
    margin-top: 20px;
    padding: 10px;
    background-color: rgb(50, 41, 54);
    border: white 2px solid;
    color: white;
    border-radius: 10px;
    cursor: pointer;
    &:disabled {
        opacity: .5;
        cursor: unset;
    }
}
#determinant-form {
    margin-top: 10px;
    text-align: left;
    border-left: white 2px solid;
    padding-left: 10px;
    &>select {
        background-color: black;
        border: white 1px solid;
        color: white;
    font-size: larger;
    }
    display: flex;
    align-items: center;
    justify-content: center;
    &>*{
        flex: 1;
    }
}
#det-calc-steps {
    font-size: 1.5rem;
    margin-top: 20px;
    font-weight: bold;
    font-family: monospace;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    gap: 10px;
    &>*{
        flex: 1;
    }
}
@media screen and (max-width:1000px) {
    #det-calc-steps {
        font-size: .8rem;
    }
}
.det-calc-step {
    width: 4rem;
    aspect-ratio: 2/1;
    /* background-color: red; */
    border-radius: 10px;
    padding: 10px;
    align-items: center;
    justify-content: center;
    display: flex;
    border: white 1px solid;
    box-sizing: border-box;
}

